<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:and="http://schemas.android.com/apk/res/android"
    and:layout_width="fill_parent"
    and:layout_height="fill_parent"
    and:orientation="vertical" 
    >
		<TextView 
			and:id="@+id/mainMenuText"
			and:text="@string/MainMenuTestText"
			and:gravity="top|center_horizontal"
			and:layout_width="match_parent"
			and:layout_height="wrap_content"
			and:textSize="24.0dp"
			and:layout_marginTop="40.0sp"
			and:textStyle="italic"
		/> 
		
		<TableLayout 
		    and:layout_width="match_parent"
			and:layout_height="wrap_content"
			and:layout_gravity="center_vertical|center_horizontal"
			and:layout_margin="20.0dp"
			>
		<Button 
		    and:id="@+id/beginButton"
		    and:layout_width="match_parent"
		    and:layout_height="wrap_content"
		    and:text="@string/BeginButtonText"
		    and:onClick="BeginButtonClick"
		    and:textSize="24.0dp"
	    />
		<Button 
		    and:id="@+id/settingsButton"
		    and:layout_width="match_parent"
		    and:layout_height="wrap_content"
		    and:text="@string/SettingsButtonText"
		    and:onClick="SettingsButtonClick"
		    and:textSize="24.0dp"
	    />
		<Button 
		    and:id="@+id/aboutButton"
		    and:layout_width="match_parent"
		    and:layout_height="wrap_content"
		    and:text="@string/AboutButtonText"
		    and:onClick="AboutButtonClick"
		    and:textSize="24.0dp"
	    />
		<!--  
		<TextView 
			and:id="@+id/happyValentinesText"
			and:gravity="center_horizontal"
			and:layout_width="match_parent"
			and:layout_height="wrap_content"
			and:textSize="32.0dp"
			and:layout_marginTop="40.0sp"
			and:textColor="@color/markRed"
			and:typeface="serif"
			and:textStyle="bold"
			and:text="@string/HappyValentines"
		/> 		
		-->
		<ImageView
		    and:layout_marginTop="30.0sp"
		    and:id="@+id/menuImage"
		    and:layout_gravity="center"
		    and:layout_height="fill_parent" 
		    and:layout_width="fill_parent"
		    and:src="@drawable/menu_image"
	 	/>
		
		</TableLayout>
</LinearLayout>