<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:and="http://schemas.android.com/apk/res/android"
    and:layout_width="fill_parent"
    and:layout_height="fill_parent"
    and:orientation="vertical" 
    >
	<TextView 
	    and:layout_marginTop="5.0dp"
	    and:layout_marginBottom="10.0dp"
		and:id="@+id/settingsMenuText"
		and:text="@string/SettingsMenuText"
		and:textSize="16.0dp"
		and:layout_gravity="top|center_horizontal"
		and:layout_width="wrap_content"
		and:layout_height="wrap_content"
	/>
	<CheckBox 
	    and:id="@+id/soundOnOffCheckBox"
	    and:text="@string/SoundOnOffCheckBoxText"
	    and:layout_width="wrap_content"
		and:layout_height="wrap_content"
		and:layout_gravity="center_horizontal"
		and:onClick="soundOnOffCheckBoxClicked"
	    />
	<CheckBox 
	    and:id="@+id/correctAnswerDialogBoxCheckBox"
	    and:text="@string/CorrectAnswerDialogBoxCheckBoxText"
	    and:layout_width="wrap_content"
		and:layout_height="wrap_content"
		and:layout_gravity="center_horizontal"
		and:onClick="shouldShowCorrectAnswerDialogBoxClick"
	    />
	<!-- 
	<CheckBox 
	    and:id="@+id/debugModeCheckBox"
	    and:text="@string/DebugModeCheckBoxText"
	    and:layout_width="wrap_content"
		and:layout_height="wrap_content"
		and:layout_gravity="center_horizontal"
		and:onClick="debugModeCheckBoxClick"
		and:enabled="false"
	    />
	     -->
</LinearLayout>