<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:and="http://schemas.android.com/apk/res/android"
    and:layout_width="fill_parent"
    and:layout_height="fill_parent"
    and:orientation="vertical" 
    >
	
    <LinearLayout 
        and:layout_width="fill_parent"
    	and:layout_height="wrap_content"
    	and:orientation="vertical" >
	   	<TextView 
			and:id="@+id/introTextTitle"
			and:text="@string/GameIntroText"
			and:gravity="top|center_horizontal"
			and:layout_width="fill_parent"
			and:layout_height="wrap_content"
			and:layout_marginTop="10.0dp"
			and:textSize="16.0dp"
		/>
	   	
		<TextView 
			and:id="@+id/introText"
			and:text="@string/GameIntroBodyText"
			and:layout_width="fill_parent"
			and:layout_gravity="left"
			and:layout_height="wrap_content"
			and:textSize="16.0dp"
			and:layout_marginTop="20.0dp"
		/>
	   	
	    <RelativeLayout 
	        and:id="@+id/InnerRelativeLayout"
	        and:layout_width="fill_parent"
	        and:layout_height="wrap_content"
			and:layout_marginBottom="20.0dp"
	        >
	   	
		   	<Button 
		   	    and:id="@+id/StartGameButton"
				and:text="@string/StartGameButton"
				and:onClick="LevelIntroClick"
				and:layout_centerHorizontal="true"
				and:layout_width="wrap_content"
				and:layout_height="wrap_content"
				and:layout_alignParentBottom="true" 
		   	    />
		</RelativeLayout>
	</LinearLayout>
</ScrollView>